# BelenuX

./: .gitignore  CMakeLists.txt  README.md
belenos.old/: README.md
belenos.old/include/belenos/: draw.h
belenos.old/src/: draw.c  frame.c
belenos.old/tests/: draws.c
blxcalc/: CMakeLists.txt  node.c  queue.c  stack.c  start.c
blxcalc/include/: node.h  queue.h  stack.h
blxhw/: CMakeLists.txt  start.c
include/: version.h.in
libblx/: CMakeLists.txt  color.c  display.c  draw.c  errors.c  event.c  frame.c  shape.c  window.c
libblx/blx/: blx.h  color.h  colors.h  display.h  draw.h  event.h  frame.h  shape.h  types.h  version.h  version.h.in  window.h
libblx/scripts/: colors.sh
src/: start.c
